--- a/app/index.html
+++ b/app/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>PortfolioDx8</title>
+    <title>CharlieTran</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     {{content-for "head"}}
 
     <link rel="stylesheet" href="{{rootURL}}assets/vendor.css">
-    <link rel="stylesheet" href="{{rootURL}}assets/portfolio-dx8.css">
+    <link rel="stylesheet" href="{{rootURL}}assets/charlie-tran.css">
 
     {{content-for "head-footer"}}
   </head>
@@ -18,7 +18,7 @@
     {{content-for "body"}}
 
     <script src="{{rootURL}}assets/vendor.js"></script>
-    <script src="{{rootURL}}assets/portfolio-dx8.js"></script>
+    <script src="{{rootURL}}assets/charlie-tran.js"></script>
 
     {{content-for "body-footer"}}
   </body>
