--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
     <title>CharlieTran</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/png" href="assets/images/favicon-32x32.png" sizes="32x32">
 
     {{content-for "head"}}
 
